syntax = "proto3";

package ares.messaging;

import "PlannerInfo.proto";
import "Planning/ManualPlanner.proto";

import "google/protobuf/empty.proto";

service AresPlanning {
	rpc GetAllPlanners(GetAllPlannersRequest) returns (GetAllPlannersResponse);
	rpc SeedManualPlanner(planning.ManualPlannerSeed) returns (google.protobuf.Empty);
	rpc GetManualPlannerSeed(google.protobuf.Empty) returns (planning.ManualPlannerSetCollection);
	rpc ResetManualPlanner(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetAllPlannersRequest {
}

message GetAllPlannersResponse {
	repeated PlannerInfo planners = 1; // gets all currently registered planners
}