syntax = "proto3";

package ares.messaging;

import "PlannerInfo.proto";
import "google/protobuf/empty.proto";

service AresPlanning {
	rpc GetAllPlanners(GetAllPlannersRequest) returns (GetAllPlannersResponse);
	rpc SeedManualPlanner(ManualPlannerSeedRequest) returns (google.protobuf.Empty);
}

message GetAllPlannersRequest {
}

message GetAllPlannersResponse {
	repeated PlannerInfo planners = 1; // gets all currently registered planners
}

message ManualPlannerSeedRequest {
	oneof planner_stuff {
		ManualPlannerSetCollection planner_values = 1;
		ManualPlannerFileLines file_lines = 2;
	}
}

message ManualPlannerSet {
	repeated ParameterNameValuePair parameter_values = 1;
}

message ParameterNameValuePair {
	string name = 1; // name of the parameter
	double value = 2; // value for the parameter
}

message ManualPlannerFileLines {
	repeated string planner_values = 1;
}

message ManualPlannerSetCollection {
	repeated ManualPlannerSet planned_values = 1;
}