syntax = "proto3";

package ares.messaging;

message PlannerInfo {
	string name = 1; // name of the planner
	string version = 2; // version of the planner
}